# jpoke

./: .copilot-instructions.md  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  LOGGING_MIGRATION_GUIDE.md  MANIFEST.in  README.md  SECURITY.md  TEST_AUDIT_REPORT.md  analysis_result.json  check_handlers.py  dashboard.json  gen_output.txt  mkdocs.yml  pyproject.toml  repair_event_names.py  setup.cfg  sort_output.txt  test.json  test_error.txt  test_eventcontext.py  test_failed.txt  test_i_output.txt  test_multi_handlers.py  test_output.txt
.claude/: settings.json
.github/: copilot-instructions.md
.loop/: fuzz_state.json  impl_state.json  lethal_state.json  review_state.json  state.json  todo_state.json  tsfuzz_state.json
docs/: examples.md  getting_started.md  improvements.md  license.md  quick_reference.md
examples/: 01_quickstart.py  02_team_battle.py  03_custom_player.py  04_damage_calculation.py  05_tree_search_ai.py  06_bulk_simulation.py  07_janken_nash_fictitious_play.py  07_replay.py  08_janken_nash_cfr.py  08_janken_nash_fictitious_play.py  09_janken_nash_cfr.py  README.md
plan/: ailment.md  global_field.md  side_field.md  あくしゅう.md  あついしぼう.md  あとだし.md  あまのじゃく.md  あめうけざら.md  あめふらし.md  いかりのこうら.md  いかりのつぼ.md  いしあたま.md  いたずらごころ.md  いろめがね.md  いわはこび.md  うのミサイル.md  うるおいボイス.md  うるおいボディ.md  えんかく.md  おどりこ.md  おみとおし.md  おもかげやどし.md  かいりきバサミ.md  かぜのり.md  かそく.md  かたいツメ.md  かるわざ.md  かわりもの.md  かんそうはだ.md  かんろなミツ.md  がんじょう.md  がんじょうあご.md  きけんよち.md  きゅうばん.md  きょううん.md  きよめのしお.md  きれあじ.md  きんしのちから.md  ぎたい.md  (+221 more)
(+10993 files in other folders)
