[metadata]
name = jpoke
version = 0.0.1
description = A Japansese python package for Pokemon battle simulation / bot developent
author = tmwork1
author_email = tmtm.holmes@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True

python_requires = >=3.10

[options.packages.find]
where = src

[options.package_data]
jpoke = resources/**/*

[build_sphinx]
source-dir = docs/
build-dir = docs/_build

[bdist_wheel]
universal = 1